# saber

./: .gitignore  Cargo.toml  README.md
bio_file_reader/: Cargo.toml
bio_file_reader/src/: byte_chunk_iter.rs  error.rs  interval.rs  lib.rs  plink_bed.rs  plink_bim.rs  set.rs
bio_file_reader/src/interval/: trait_impl.rs  traits.rs
math/: Cargo.toml
math/src/: integer_partition.rs  integer_partitions.rs  lib.rs  sample.rs  set.rs  traits.rs
math/src/interval/: trait_impl.rs
math/src/sample/: trait_impl.rs
math/src/set/: integer_set.rs  ordered_integer_set.rs  trait_impl.rs  traits.rs
math/src/set/ordered_integer_set/: arithmetic.rs
math/src/traits/: trait_impl.rs
python/: get_std.py  sum_binary_traits_positives.py  tabulate_output.py  to_dominance_bim.py
src/: cublas.rs  error.rs  gg_estimates.rs  gxg_trace_estimators.rs  heritability_estimator.rs  histogram.rs  jackknife.rs  lib.rs  mailman.rs  main.rs  matmul_cublas.rs  matrix_op.rs  matrix_ops.rs  matrix_util.rs  partitioned_jackknife_estimates.rs  program_flow.rs  simulation.rs  sparsity_stats.rs  stats_util.rs  timer.rs  trace_estimator.rs  trace_estimators.rs  util.rs
src/simulation/: mod.rs  sim_geno.rs  sim_pheno.rs  simulation.rs
src/util/: histogram.rs  matrix_util.rs  mod.rs  stats_util.rs  timer.rs
