[package]
name = "saber"
version = "0.1.0"
authors = ["Aaron <aaronzhouqian@ucla.edu>"]
edition = "2018"

[workspace]
members = ["bio_file_reader"]

[dependencies]
bio_file_reader = {path = "bio_file_reader"}
clap = "2.32.0"
num-traits = "0.2.6"
ndarray = {version = "0.12.1", features = ["blas"] }
ndarray-linalg = "0.10.0"
ndarray-parallel = "0.9.0"
rand = "0.6.5"
ndarray-rand = "0.9.0"
blas-src = { version = "0.3", features = ["openblas"] }
colored = "1.7.0"
time = "0.1.42"

collenchyma = {version = "0.0.8", default-features = false, features = ["native", "cuda"], optional = true}
collenchyma-blas = {version = "0.2.0", default-features = false, features = ["native", "cuda"], optional = true}
rblas = {version = "0.0.13", optional=true}

[dev-dependencies]
tempfile = "3.0.8"

[features]
cuda = ["collenchyma", "collenchyma-blas", "rblas"]

[profile.bench]
opt-level = 3
